# simple-email-parse

./: .gitignore  LICENSE  README.md  email_parser.py  json_processor.py  pyproject.toml  requirements.txt  setup.py
simple_email_parser/: __init__.py  email_parser.py  header_adapters.py  html_processor.py
tests/: test_basic.py
